# bio-rag

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  analytics.py  arxiv.py  auth.py  chat.py  documents.py  hybrid_search.py  i18n.py  pubmed.py  search.py  users.py
backend/app/core/: config.py  i18n.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  chat.py  paper.py  user.py
backend/app/repositories/: __init__.py  base.py  chat.py  paper.py  user.py
backend/app/schemas/: __init__.py  chat.py  common.py  paper.py  search.py  user.py
backend/app/services/: demo.py
backend/app/services/analytics/: __init__.py  trend.py
backend/app/tasks/: celery_app.py  crawler.py  embedding.py
backend/tests/: conftest.py
backend/tests/api/: test_api_endpoints.py  test_auth.py  test_new_endpoints.py  test_users.py
backend/tests/repositories/: test_repositories.py
backend/tests/services/: test_additional_services.py  test_chunker.py  test_comprehensive_coverage.py  test_coverage_boost.py  test_deep_coverage.py  test_embedding_service.py  test_final_coverage.py  test_hybrid_search.py  test_integration_coverage.py  test_low_coverage_modules.py  test_mock_coverage.py  test_new_services.py  test_qdrant_store.py  test_reranker.py  test_services.py  test_targeted_coverage.py  test_validator.py
(+126 files in other folders)
